# hypr-which-key

./: .gitignore  Cargo.toml  README.md  flake.nix
.dev/: devshells.nix  pre-commit.nix  treefmt.nix
.github/workflows/: nix-check.yml
nix/: homeManagerModule.nix
src/: get_bindings.rs  main.rs  utils.rs
