[package]
name = "hypr-which-key"
version = "0.1.0"
edition = "2021"

[dependencies]
# async-channel = "2.3.1"
# gio = "0.20.0"
# glib = "0.20.0"
# gtk4 = "0.9.0"
hyprland = {version="0.4.0-alpha.2", features= ["silent"]}
serde = {version = "1.0.204", features = ["derive"]}
serde_json = "1.0.120"
subprocess = "0.2.9"
